added pull:true for rspec image in drone yaml

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ build:
       - docker build --pull --no-cache -t dronebuild$DRONE_BUILD_NUMBER/${CI_REPO#*/} .
   spectests:
     image: 1and1internet/ubuntu-16-rspec
+    pull: true
     privileged: true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
