--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ build:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     commands:
-      - docker build --pull --no-cache -t dronebuild$DRONE_BUILD_NUMBER/${CI_REPO#*/} .
+      - python3 /scripts/images/build.py 
   spectests:
     image: 1and1internet/ubuntu-16-rspec
     pull: true
@@ -38,6 +38,7 @@ build:
      - DOCKERHUB_USERNAME=$$DOCKERHUB_USERNAME
      - DOCKERHUB_EMAIL=$$DOCKERHUB_EMAIL
      - DOCKERHUB_PASSWORD=$$DOCKERHUB_PASSWORD
+     - DEPENDENCY_GRAPH_URL=$$DEPENDENCY_GRAPH_URL
+     - BUILD_TRIGGER_API_URL=$$BUILD_TRIGGER_API_URL
     commands:
-     - bash /scripts/publish.sh
-
+     - python3 /scripts/images/publish.py
