--- a/.drone.yml
+++ b/.drone.yml
@@ -40,9 +40,9 @@ build:
      - DOCKERHUB_EMAIL=$$DOCKERHUB_EMAIL
      - DOCKERHUB_PASSWORD=$$DOCKERHUB_PASSWORD
      - DEPENDENCY_GRAPH_URL=$$DEPENDENCY_GRAPH_URL
-+    - DEPENDENCY_GRAPH_USERNAME=$$DEPENDENCY_GRAPH_USERNAME
-+    - DEPENDENCY_GRAPH_PASSWORD=$$DEPENDENCY_GRAPH_PASSWORD
+     - DEPENDENCY_GRAPH_USERNAME=$$DEPENDENCY_GRAPH_USERNAME
+     - DEPENDENCY_GRAPH_PASSWORD=$$DEPENDENCY_GRAPH_PASSWORD
      - BUILD_TRIGGER_API_URL=$$BUILD_TRIGGER_API_URL
-+    - SHARED_BUILD_STORAGE=$$SHARED_BUILD_STORAGE
+     - SHARED_BUILD_STORAGE=$$SHARED_BUILD_STORAGE
     commands:
      - python3 -u /scripts/images/publish.py
