--- a/files/etc/apache2/sites-available/000-default.conf
+++ b/files/etc/apache2/sites-available/000-default.conf
@@ -17,8 +17,8 @@
         # modules, e.g.
         #LogLevel info ssl:warn
 
-        ErrorLog ${APACHE_LOG_DIR}/error.log
-        CustomLog ${APACHE_LOG_DIR}/access.log combined
+        ErrorLog "|/usr/bin/cronolog -S ${APACHE_LOG_DIR}/error_log -P ${APACHE_LOG_DIR}/error_log.1 ${APACHE_LOG_DIR}/error_log-%Y-%m-%d.log"
+        CustomLog "|/usr/bin/cronolog -S ${APACHE_LOG_DIR}/access_log -P ${APACHE_LOG_DIR}/access_log.1 ${APACHE_LOG_DIR}/access_log-%Y-%m-%d.log" combined
 
         <Directory /var/www/>
           Options Indexes FollowSymLinks
