--- a/files/etc/apache2/sites-available/001-default-ssl.conf
+++ b/files/etc/apache2/sites-available/001-default-ssl.conf
@@ -5,8 +5,8 @@
 	
 	SSLEngine On
 
-	SSLCertificateFile /path/to/openshift/secret/cert.crt
-	SSLCertificateKeyFile /path/to/openshift/secret/key.key
+	SSLCertificateFile /ssl/ssl.crt
+	SSLCertificateKeyFile /ssl/ssl.key
 
 	# disable ssl compression
 	SSLCompression Off
