Added document root configuration.

--- a/files/etc/apache2/sites-available/001-default-ssl.conf
+++ b/files/etc/apache2/sites-available/001-default-ssl.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:8443>
-	DocumentRoot /var/www/html
+	DocumentRoot ${DOCUMENT_ROOT}
     	ErrorLog /var/log/apache2/error.log
     	CustomLog /var/log/apache2/access.log combined
 	
