--- a/files/etc/apache2/sites-available/000-default.conf
+++ b/files/etc/apache2/sites-available/000-default.conf
@@ -9,7 +9,7 @@
         #ServerName www.example.com
 
         ServerAdmin webmaster@localhost
-        DocumentRoot ${DOCUMENT_ROOT}
+        DocumentRoot /var/www/${DOCUMENT_ROOT}
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
