--- a/files/etc/apache2/sites-available/000-default.conf
+++ b/files/etc/apache2/sites-available/000-default.conf
@@ -7,7 +7,8 @@
         # value is not decisive as it is used as a last resort host regardless.
         # However, you must set it for any further virtual host explicitly.
         #ServerName www.example.com
-
+		UseCanonicalName On
+		UseCanonicalPhysicalPort On
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/${DOCUMENT_ROOT}
 
