Removed 'Indexes' from options in the site conf files

--- a/files/etc/apache2/sites-available/000-default.conf
+++ b/files/etc/apache2/sites-available/000-default.conf
@@ -20,7 +20,7 @@
         CustomLog "|/usr/bin/cronolog -S ${APACHE_LOG_DIR}/${HOSTNAME}-access_log -P ${APACHE_LOG_DIR}/${HOSTNAME}-access_log.1 ${APACHE_LOG_DIR}/${HOSTNAME}-access_log-%Y-%m-%d.log" combined
 
         <Directory /var/www/>
-          Options Indexes FollowSymLinks
+          Options FollowSymLinks
           AllowOverride All
           Require all granted
         </Directory>
