--- a/files/etc/apache2/sites-available/001-default-ssl.conf
+++ b/files/etc/apache2/sites-available/001-default-ssl.conf
@@ -3,18 +3,18 @@
 #    	ErrorLog /var/log/apache2/error.log
 #    	CustomLog /var/log/apache2/access.log combined
 	ErrorLog "|/usr/bin/cronolog -S ${APACHE_LOG_DIR}/${HOSTNAME}-error_log -P ${APACHE_LOG_DIR}/${HOSTNAME}-error_log.1 ${APACHE_LOG_DIR}/${HOSTNAME}-error_log-%Y-%m-%d.log"
-	CustomLog "|/usr/bin/cronolog -S ${APACHE_LOG_DIR}/${HOSTNAME}-access_log -P ${APACHE_LOG_DIR}/${HOSTNAME}-access_log.1 ${APACHE_LOG_DIR}/${HOSTNAME}-access_log-%Y-%m-%d.log" combined	
+	CustomLog "|/usr/bin/cronolog -S ${APACHE_LOG_DIR}/${HOSTNAME}-access_log -P ${APACHE_LOG_DIR}/${HOSTNAME}-access_log.1 ${APACHE_LOG_DIR}/${HOSTNAME}-access_log-%Y-%m-%d.log" combined
 	SSLEngine On
 
 	SSLCertificateFile /ssl/ssl.crt
 	SSLCertificateKeyFile /ssl/ssl.key
 
 	<Directory /var/www/>
-          Options Indexes FollowSymLinks
+          Options FollowSymLinks
           AllowOverride All
           Require all granted
         </Directory>
-	
+
 	# disable ssl compression
 	SSLCompression Off
 
