--- a/files/etc/apache2/mods-available/rpaf.conf
+++ b/files/etc/apache2/mods-available/rpaf.conf
@@ -1,7 +1,7 @@
 <IfModule mod_rpaf.c>
         RPAF_Enable             On
-        #RPAF_Header             X-Real-Ip
-        #RPAF_ProxyIPs           111.111.111.111
+        RPAF_Header             X-Forwarded-For
+        RPAF_ProxyIPs           10.0.0.0/8
         RPAF_SetHostName        On
         RPAF_SetHTTPS           On
         RPAF_SetPort            On
