--- a/files/etc/apache2/mods-available/rpaf.conf
+++ b/files/etc/apache2/mods-available/rpaf.conf
@@ -1,6 +1,6 @@
 RPAF_Enable             On
 RPAF_Header             X-Forwarded-For
-RPAF_ProxyIPs           10.0.0.0/8
+RPAF_ProxyIPs           10.0.0.0/8 172.0.0.0/8 192.168.0.0/16
 RPAF_SetHostName        On
 RPAF_SetHTTPS           On
 RPAF_SetPort            On
