--- a/.drone.yml
+++ b/.drone.yml
@@ -22,6 +22,7 @@ build:
       - export export IMAGE=dronejob$CI_JOB_ID/${CI_REPO#*/}
       - echo $IMAGE
       - mkdir ../drone-tests; git clone https://github.com/1and1internet/drone-tests.git ../drone-tests
+      - pwd
       - git checkout rpaf
       - rspec -f documentation spec/spec_helper.rb
   publish:
