--- a/.drone.yml
+++ b/.drone.yml
@@ -21,9 +21,7 @@ build:
     commands:
       - export export IMAGE=dronejob$CI_JOB_ID/${CI_REPO#*/}
       - echo $IMAGE
-      - mkdir ../drone-tests; git clone https://github.com/1and1internet/drone-tests.git ../drone-tests
-      - pwd
-      - git checkout rpaf
+      - mkdir ../drone-tests; git clone -b rpaf https://github.com/1and1internet/drone-tests.git ../drone-tests
       - rspec -f documentation spec/spec_helper.rb
   publish:
     when:
