--- a/files/etc/apache2/conf-available/serve-cgi-bin.conf
+++ b/files/etc/apache2/conf-available/serve-cgi-bin.conf
@@ -8,8 +8,8 @@
         </IfModule>
 
         <IfDefine ENABLE_USR_LIB_CGI_BIN>
-                ScriptAlias /cgi-bin/ /var/www/${DOCUMENT_ROOT}/cgi-bin
-                <Directory "/var/www/${DOCUMENT_ROOT}/cgi-bin">
+                ScriptAlias /cgi-bin/ /var/www/${DOCUMENT_ROOT}/cgi-bin/
+                <Directory "/var/www/${DOCUMENT_ROOT}/cgi-bin/">
                         AllowOverride None
                         Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
                         Require all granted
