--- a/files/etc/apache2/conf-available/serve-cgi-bin.conf
+++ b/files/etc/apache2/conf-available/serve-cgi-bin.conf
@@ -1,13 +1,13 @@
 <IfModule mod_alias.c>
         <IfModule mod_cgi.c>
-                Define ENABLE_USR_LIB_CGI_BIN
+                Define ENABLE_USER_CGI_BIN
         </IfModule>
 
         <IfModule mod_cgid.c>
-                Define ENABLE_USR_LIB_CGI_BIN
+                Define ENABLE_USER_CGI_BIN
         </IfModule>
 
-        <IfDefine ENABLE_USR_LIB_CGI_BIN>
+        <IfDefine ENABLE_USER_CGI_BIN>
                 ScriptAlias /cgi-bin/ /var/www/${DOCUMENT_ROOT}/cgi-bin/
                 <Directory "/var/www/${DOCUMENT_ROOT}/cgi-bin/">
                         AllowOverride None
